--- a/popup.html
+++ b/popup.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h2>Night Mode</h2>
+
+    <button type="button" id="activate">Activate</button> 
+
+    <script src="jquery.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
